objects/Clearance__c.object
<CustomObject>
    <fields>
        <fullName>AA_HH__c</fullName>
        <formula>Station__r.AA_HH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AA HH%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Station__r.Affiliate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Letters__c</fullName>
        <formula>Station__r.Call_Letters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Letters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearance_List__c</fullName>
        <label>Clearance List</label>
        <referenceTo>Clearance_List__c</referenceTo>
        <relationshipLabel>Clearances</relationshipLabel>
        <relationshipName>Clearances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Daypart__c</fullName>
        <label>Daypart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EM</fullName>
                </value>
                <value>
                    <fullName>DAY</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>LF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Time_Period__c</fullName>
        <label>First Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>Launch Date of Program on Station</description>
        <label>Launch Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Station__r.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Air_Date__c</fullName>
        <label>Off Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Time_Period__c</fullName>
        <label>Second Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Station</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>Clearances</relationshipLabel>
        <relationshipName>Clearances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>US_HH__c</fullName>
        <formula>Station__r.US_HH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US HH%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Clearance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Clearance_List__c</columns>
        <columns>Station__c</columns>
        <columns>Market__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Daypart__c</columns>
        <columns>US_HH__c</columns>
        <columns>AA_HH__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Clearance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clearances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>